# package_cookiecutters

./: cookiecutter.json
{{cookiecutter.pypi_package_name}}/: .coveragerc  .pylintrc  README.md  setup.cfg
{{cookiecutter.pypi_package_name}}/src/{{cookiecutter.project_slug}}/: __init__.py
