[metadata]
name = {{ cookiecutter.pypi_package_name }}
version = attr: {{ cookiecutter.pypi_package_name }}.VERSION
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
description = My package description
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = one, two
license = MIT
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages=find:
package_dir=
    =src
python_requires = >=3.9
zip_safe = True
include_package_data = True
install_requires =
    requests
    importlib-metadata; python_version<"3.10"

[options.package_data]
* = *.txt, *.rst
hello = *.msg

# [options.entry_points]
# console_scripts =
#     executable-name = {{ cookiecutter.pypi_package_name }}.module:function

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
where=src
exclude =
    examples*
    tools*
    docs*
    {{ cookiecutter.pypi_package_name }}.tests*
